samples/_failures_safe/1761128597_058574_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a048c929.c: In function ‘tokenize’:
./samples/SAFE/__tmp_a048c929.c:162:9: error: expected declaration or statement at end of input
  162 |         tokens[token_count].line = line;
      |         ^~~~~~
./samples/SAFE/__tmp_a048c929.c:162:9: error: expected declaration or statement at end of input
